--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "sync": "^0.2.5",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.4",
-    "xmldom": "0.1.13"
+    "xmldom": "0.1.13",
+    "debug": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^1.10.3",
