--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "construx-copier": "^1.0.0",
     "construx-dustjs": "^1.1.0",
     "construx-less": "^1.0.0",
+    "debug": "^2.2.0",
     "decimal.js": "^7.1.0",
     "dust-makara-helpers": "^4.1.2",
     "engine-munger": "^1.1.2",
@@ -41,14 +42,14 @@
     "only": "0.0.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "pm2": "^3.0.3",
     "request": "^2.45.0",
     "sha1": "^1.1.0",
     "socket.io-client": "^0.9.16",
     "sync": "^0.2.5",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.4",
-    "xmldom": "0.1.13",
-    "debug": "^2.2.0"
+    "xmldom": "0.1.13"
   },
   "devDependencies": {
     "eslint": "^1.10.3",
